<resources>
    <string name="app_name">Alvin Algadri</string>
    <string name="splash_name">Alvin Algadri</string>
    <string name="splash_nim">10119187</string>
    <string name="halo">Halo!</string>
    <string name="perkenalan">Nama saya Alvin Algadri, umur saya 19 tahun saya seorang mahasiswa Universitas Komputer Indonesia. Saya ingin menjadi full-stack Android Developer.</string>
    <string name="hobby">Saya mempunyai hobi yang halnya seperti orang-orang biasa, diantaranya yaitu :</string>
    <string name="gaming">Game</string>
    <string name="bola">Bola</string>
    <string name="basket">Basket</string>
    <string name="musik">Musik</string>
    <string name="name">Alvin Algadri</string>
    <string name="self_bio">Self-Biodata</string>
    <string name="profil">Profile</string>
    <string name="daily">Activity</string>
    <string name="galeri">Gallery</string>
    <string name="musicfav">Playlist</string>
    <string name="cita">Cita-Cita</string>
    <string name="androiddev">Full-Stack Android Developer</string>
    <string name="pemainbola">Professional Football Player</string>
    <string name="rapper">Rapper</string>
    <string name="bintang1">★</string>
    <string name="bintang2">★★</string>
    <string name="bintang3">★★★</string>
    <string name="bintang4">★★★★</string>
    <string name="bintang5">★★★★★</string>
    <string name="tentang">Tentang</string>
    <string name="deskripsi1">Alvin Algadri, umur 19 tahun saya seorang Mahasiswa Unikom.</string>
    <string name="deskripsi2">Saya lulusan dari SMAN 1 Dayeuhkolot.</string>
    <string name="deskripsi3">Dulu saya mengambil jurusan IPA, dan sekarang saya sedang mempelajari ilmu tentang programming karena ketertarikan saya.</string>
    <string name="deskripsi4">Tinggi saya 174 cm, berat badan 65 kg.</string>
    <string name="contact">Contact</string>
    <string name="find">Find Me</string>
    <string name="about">About</string>
    <string name="number">+62 85157011693</string>
    <string name="email">algadrialvin1@gmail.com</string>
    <string name="nextwalkthru">Next</string>
    <string name="skipwalkthru">Skip</string>
    <string name="descwaltkthru">Aplikasi ini adalah sebuah self-biodata yang dibuat untuk memenuhi tugas UTS AKB 2022.</string>
    <string name="descwalkthru2">Self-biodata dari seorang mahasiswa Universitas Komputer Indonesia.</string>
    <string name="descwalkthru3">Terdapat data-diri, galery, friend-list, daily routine, dan lain-lain.</string>
</resources>