<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                app:srcCompat="@drawable/ic_person" />

            <ImageButton
                android:id="@+id/btn_daily"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                app:srcCompat="@drawable/ic_calendar_today" />

            <ImageButton
                android:id="@+id/btn_galery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                app:srcCompat="@drawable/ic_perm_media" />

            <ImageButton
                android:id="@+id/btn_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTintMode="add"
                app:srcCompat="@drawable/ic_queue_music" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="119dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/test" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_marginRight="@dimen/dimen26"
            android:fontFamily="@font/yogurt_mango"
            android:gravity="center"
            android:text="@string/halo"
            android:textColor="@color/colorWhite"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen12"
            android:layout_marginRight="@dimen/dimen26"
            android:text="@string/perkenalan"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen25"
            android:layout_marginTop="@dimen/dimen25"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:text="@string/hobby"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_videogame_asset" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_sports_soccer" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_sports_basketball" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_library_music" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/dimen25"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gaming"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bola"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/basket"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="27dp"
            android:layout_height="31dp"
            android:layout_marginEnd="@dimen/dimen25"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/musik"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/cita"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/androiddev"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/pemainbola"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/rapper"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="245dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/bintang5"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/bintang3"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/bintang2"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>