<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:mContext=".LoginCodeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="119dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/test" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen30"
            android:layout_marginRight="@dimen/dimen26"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorWhite"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen25"
            android:layout_marginRight="@dimen/dimen26"
            android:gravity="center"
            android:text="@string/tentang"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen25"
            android:layout_marginEnd="@dimen/dimen26"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/deskripsi1"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginEnd="@dimen/dimen26"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/deskripsi2"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginEnd="@dimen/dimen26"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/deskripsi3"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen26"
            android:layout_marginEnd="@dimen/dimen26"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/deskripsi4"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen25"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />


    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="1dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="31dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_local_phone" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/purple_500" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="500dp"
        tools:ignore="MissingConstraints"/>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp">

            <Button
                android:id="@+id/btn_whatsapp"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@color/greenlight"
                android:text="Whatsapp"
                app:backgroundTint="@null"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_instagram"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@color/igcolor"
                app:backgroundTint="@null"
                android:text="Instagram"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:layout_editor_absoluteX="1dp">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen25"
                android:layout_weight="1"
                android:text="@string/find"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_location"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                app:backgroundTint="@null"
                android:text="Location"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="1dp">

            <Button
                android:id="@+id/btnDialog"
                style="@style/buttonwhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/about"
                app:backgroundTint="@null" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>